Updated CF file
Updated stack names to avoid conflict when both are running in the same AWS Account/Region.

--- a/3-microservices/infrastructure/ecs.yml
+++ b/3-microservices/infrastructure/ecs.yml
@@ -142,7 +142,7 @@ Resources:
   ECSALB:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
-      Name: demo
+      Name: demo-microservices
       Scheme: internet-facing
       LoadBalancerAttributes:
       - Key: idle_timeout.timeout_seconds
