--- a/2-containerized/infrastructure/ecs.yml
+++ b/2-containerized/infrastructure/ecs.yml
@@ -142,7 +142,7 @@ Resources:
   ECSALB:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
-      Name: demo
+      Name: demo-monolith
       Scheme: internet-facing
       LoadBalancerAttributes:
       - Key: idle_timeout.timeout_seconds
